--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,6 +1,47 @@
 .Weather {
   border: 1px solid #dadde1;
+  border-radius: 4px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(135, 135, 135);
+  padding: 16px;
 }
-.row {
-  display: flex;
+
+.Weather h1 {
+  font-size: 24px;
+  font-weight: 100;
+  line-height: 29px;
+  margin: 20px 0 0 0;
+}
+
+.Weather ul {
+  margin: 0;
+  padding: 0;
+}
+.Weather li {
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
+  list-style: none;
+}
+.Weather img {
+  height: 64px;
+  margin-right: 10px;
+  display: inline-block;
+  width: 64px;
+}
+.Weather .temp {
+  font-weight: bold;
+  color: rgb(33, 33, 33);
+  font-size: 64px;
+  line-height: 64px;
+  font-weight: 400;
+}
+.Weather .unit {
+  color: rgb(33, 33, 33);
+  font-size: 16px;
+  font-weight: 400;
+  position: relative;
+  top: -34px;
+  line-height: 1;
+  margin-left: 5px;
 }
