--- a/src/Weather.css
+++ b/src/Weather.css
@@ -28,6 +28,7 @@
   margin-right: 10px;
   display: inline-block;
   width: 64px;
+  margin-bottom: 34px;
 }
 .Weather .temp {
   font-weight: bold;
@@ -43,5 +44,4 @@
   position: relative;
   top: -34px;
   line-height: 1;
-  margin-left: 5px;
 }
