--- a/src/Weather.css
+++ b/src/Weather.css
@@ -23,12 +23,10 @@
   line-height: 19px;
   list-style: none;
 }
-.Weather img {
-  height: 64px;
-  margin-right: 10px;
+.Weather canvas {
+  margin-right: 5px;
   display: inline-block;
-  width: 64px;
-  margin-bottom: 34px;
+  margin-top: 5px;
 }
 .Weather .temp {
   font-weight: bold;
