--- a/src/Weather.css
+++ b/src/Weather.css
@@ -24,7 +24,7 @@
   list-style: none;
 }
 .Weather canvas {
-  margin-right: 5px;
+  margin-left: 10px;
   display: inline-block;
   margin-top: 5px;
 }
@@ -34,6 +34,7 @@
   font-size: 64px;
   line-height: 64px;
   font-weight: 400;
+  margin-left: -20px;
 }
 .Weather .unit {
   color: rgb(33, 33, 33);
